income vs interest included

--- a/Engineering-Ethan.ipynb
+++ b/Engineering-Ethan.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Number1MarsMan/googleColabProjects/blob/main/Engineering-Ethan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -203,12 +214,12 @@
         "# Choose the appropriate normalization technique based on your data and analysis goals.\n"
       ],
       "metadata": {
-        "id": "4M2UefDVNo-T",
-        "outputId": "256be38e-c235-4bce-ee1f-3c83be12b37c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "4M2UefDVNo-T",
+        "outputId": "256be38e-c235-4bce-ee1f-3c83be12b37c"
       },
       "execution_count": 24,
       "outputs": [
@@ -245,12 +256,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "JTh_8f69Opks",
-        "outputId": "fd72f210-4c65-42f8-fce1-04b5c8e407db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "JTh_8f69Opks",
+        "outputId": "fd72f210-4c65-42f8-fce1-04b5c8e407db"
       },
       "execution_count": 28,
       "outputs": [
